...
          href: null,
        }}
      />
      <Tabs.Screen
        name="home"
        options={{
          title: 'Home',
          tabBarIcon: ({ color }) => <AntDesign name="home" size={24} color={color} />,
        }}
      />
      <Tabs.Screen
        name="profile"
        options={{
...
          tabBarIcon: ({ color }) => <AntDesign name="video-camera" size={24} color={color} />,
        }}
      />
      <Tabs.Screen
        name="stress/index"
        options={{
          title: 'Stress',
          tabBarIcon: ({ color }) => <AntDesign name="dashboard" size={24} color={color} />,
        }}
      />
      <Tabs.Screen
        name="map"
        options={{
          title: 'Map',
          tabBarButtonTestID: 'tab-map',
          tabBarIcon: ({ color }) => <AntDesign name="pushpin" size={24} color={color} />,
        }}
      />
      <Tabs.Screen
        name="mapbox"
        options={{
          title: 'Mapbox',
          tabBarButtonTestID: 'tab-mapbox',
          tabBarIcon: ({ color }) => <AntDesign name="environment" size={24} color={color} />,
        }}
      />
    </Tabs>
  );
}
...
